services/core-services/authentik/resources/authentik/service-authentik.yml
apiVersion: v1
kind: Service
metadata:
  name: authentik
  namespace: authentik
spec:
  ports:
    - name: http
      port: 9000
  selector:
    app: authentik
