services/core-services/authentik/resources/authentik/ingress-authentik.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
  
spec:
  entryPoints:
    - websecure
    - web

  routes:
    - match: Host(`auth.nebulanet.xyz`)
      kind: Rule
      services:
        - name: authentik
          kind: Service
          port: http
  tls:
    secretName: authentik-tls
